# mgl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: MGLConfig.cmake.in
include/mgl/: api_utils.h  entry.h  error.h  type.h
include/mgl/container/: array.h  doubly_linked_list.h  iterator.h  singly_linked_list.h  vector.h
include/mgl/file/: archive.h  logger.h  windows_standard_archive.h
include/mgl/input/: action.h  axis.h  button.h  input_manager.h  keyboard.h  mouse.h  window.h  windows_window.h  x_window.h
include/mgl/math/: bezier_curve.h  math.h  matrix4x4.h  perlin_noise.h  point.h  quaternion.h  quaternion_matrix4x4.h  scalar.h  simd.h  transform4x4.h  transform_matrix4x4.h  transform_quaternion.h  vector.h  vector4.h
include/mgl/memory/: allocator.h  crc.h  crc32.h  debug_allocator.h  linear_allocator.h  manipulation.h  pool_allocator.h  stack_allocator.h
include/mgl/network/: ipv4_address.h  network.h  selector.h  tcp_listener.h  tcp_socket.h
include/mgl/stream/: buffer_stream.h  stream.h
include/mgl/string/: conversion.h  manipulation.h
include/mgl/thread/: atomic.h  mutex.h  thread.h
include/mgl/time/: clock.h  sleep.h  time.h
src/examples/: multi_window.c  multi_window_input.c  network_chat_client.c  network_client.c  network_client_non_blocking.c  network_server.c  perlin_noise.c  window.c  window_input.c
src/mgl/: entry.c  error.c
src/mgl/container/: array.c  doubly_linked_list.c  iterator.c  singly_linked_list.c  vector.c
src/mgl/file/: archive.c  logger.c  windows_standard_archive.c
src/mgl/input/: input_manager.c  window.c  windows_window.c  x_window.c
src/mgl/math/: bezier_curve.c  perlin_noise.c  vector.c
src/mgl/memory/: allocator.c  crc.c  crc32.c  debug_allocator.c  linear_allocator.c  manipulation.c  pool_allocator.c  stack_allocator.c
src/mgl/network/: posix_ipv4_address.c  posix_network.c  windows_ipv4_address.c  windows_network.c  windows_selector.c  windows_tcp_listener.c  windows_tcp_socket.c
src/mgl/stream/: buffer_stream.c  stream.c
src/mgl/string/: conversion.c  manipulation.c
src/mgl/thread/: atomic.c  mutex.c  posix_atomic.c  posix_mutex.c  posix_thread.c  thread.c  win32_atomic.c  win32_mutex.c  win32_thread.c
src/mgl/time/: windows_clock.c  windows_sleep.c
tests/: CMakeLists.txt  container_array.c  container_doubly_linked_list.c  container_singly_linked_list.c  container_vector.c  entry.c  math_math.c  math_matrix4x4.c  math_quaternion.c  math_quaternion_matrix4x4.c  math_scalar.c  math_simd.c  math_transform4x4.c  math_transform_matrix4x4.c  math_transform_quaternion.c  math_vector.c  math_vector4.c  memory_allocator.c  memory_linear_allocator.c  memory_pool_allocator.c  memory_stack_allocator.c  stream_buffer_stream.c  string_conversion.c  test.h  thread_thread.c
